--- a/public/css/app.css
+++ b/public/css/app.css
@@ -153,7 +153,7 @@ div {
           flex: auto;
 }
 
-.mc-start .mc-content .mc-left {
+.mc-start .mc-content .mc-work {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -164,7 +164,11 @@ div {
   background-color: #fff;
 }
 
-.mc-start .mc-content .mc-left .center-box {
+.mc-start .mc-content .mc-work.mc-mirror {
+  width: 40%;
+}
+
+.mc-start .mc-content .mc-work .center-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -183,7 +187,7 @@ div {
           align-items: center;
 }
 
-.mc-start .mc-content .mc-left .center-box .intro-title {
+.mc-start .mc-content .mc-work .center-box .intro-title {
   margin: 0px 0px 0.6em;
   letter-spacing: -1px;
   font-size: 54px;
@@ -194,16 +198,16 @@ div {
   text-align: center;
 }
 
-.mc-start .mc-content .mc-left .center-box .intro-title b {
+.mc-start .mc-content .mc-work .center-box .intro-title b {
   font-weight: 600;
   color: #2b2b5f;
 }
 
-.mc-start .mc-content .mc-left .center-box .intro-title b:last-child {
+.mc-start .mc-content .mc-work .center-box .intro-title b:last-child {
   margin-right: 10px;
 }
 
-.mc-start .mc-content .mc-left .center-box .auth-box {
+.mc-start .mc-content .mc-work .center-box .auth-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -216,15 +220,15 @@ div {
           align-items: center;
 }
 
-.mc-start .mc-content .mc-left .center-box .auth-box a.mc-btn {
+.mc-start .mc-content .mc-work .center-box .auth-box a.mc-btn {
   margin-right: 2.5em;
 }
 
-.mc-start .mc-content .mc-left .center-box .auth-box a.mc-link {
+.mc-start .mc-content .mc-work .center-box .auth-box a.mc-link {
   margin-bottom: 7px;
 }
 
-.mc-start .mc-content .mc-right {
+.mc-start .mc-content .mc-info {
   width: 40%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -235,7 +239,11 @@ div {
   position: relative;
 }
 
-.mc-start .mc-content .mc-right .mc-backgrounds {
+.mc-start .mc-content .mc-info.mc-mirror {
+  width: 60%;
+}
+
+.mc-start .mc-content .mc-info .mc-backgrounds {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -248,7 +256,7 @@ div {
   z-index: 0;
 }
 
-.mc-start .mc-content .mc-right .mc-backgrounds::after {
+.mc-start .mc-content .mc-info .mc-backgrounds::after {
   content: "";
   position: absolute;
   top: 0;
@@ -258,7 +266,7 @@ div {
   background: rgba(0, 0, 0, 0.6);
 }
 
-.mc-start .mc-content .mc-right .mc-backgrounds .mc-bg-els {
+.mc-start .mc-content .mc-info .mc-backgrounds .mc-bg-els {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -267,7 +275,7 @@ div {
           flex: auto;
 }
 
-.mc-start .mc-content .mc-right .mc-backgrounds .mc-bg-el-1 {
+.mc-start .mc-content .mc-info .mc-backgrounds .mc-bg-el-1 {
   background: -webkit-gradient(linear, right top, left top, color-stop(25.73%, #D62E23), color-stop(62.86%, #FFCE11), color-stop(93.81%, #23D680));
   background: linear-gradient(270deg, #D62E23 25.73%, #FFCE11 62.86%, #23D680 93.81%);
 }
