--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -57,10 +57,13 @@
     width: 100%;
     height: 100%;
     flex: auto;
-    .mc-left{
+    .mc-work{
       display: flex;
       flex: auto;
       width: 60%;
+      &.mc-mirror{
+        width: 40%;
+      }
       background-color: #fff;
       .center-box{
         display: flex;
@@ -100,11 +103,14 @@
         }
       }
     }
-    .mc-right{
+    .mc-info{
       width: 40%;
       display: flex;
       flex: auto;
       position: relative;
+      &.mc-mirror{
+        width: 60%;
+      }
       .mc-backgrounds{
         display: flex;
         flex: auto;
