--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -4,8 +4,11 @@
 $fd: 'Rajdhani', sans-serif;
 $fe: 'Raleway', sans-serif;
 $link: #0B84BD;
+$purple-light: rgba(68, 68, 118, 0.6);
 $purple: #444476;
 $purple-dark: #2b2b5f;
+
+$yellow-light: rgba(255, 206, 17, 0.6);
 
 
 
