Add signin and login page, fix micro-bags

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -162,6 +162,10 @@ input {
   margin-bottom: 0.8em;
 }
 
+.mc-btn.submit.sign {
+  text-transform: none;
+}
+
 .mc-link {
   font-weight: 500;
   color: #0B84BD;
