--- a/resources/assets/sass/_welcome_form.scss
+++ b/resources/assets/sass/_welcome_form.scss
@@ -71,6 +71,9 @@
     background-color: $purple;
     color: #fff;
     margin-bottom: 0.8em;
+    &.sign{
+      text-transform: none;
+    }
   }
 }
 
