--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -8,6 +8,10 @@ $purple-light: rgba(68, 68, 118, 0.6);
 $purple: #444476;
 $purple-dark: #2b2b5f;
 
+$green: #00B16A;
+$red: #D62E23;
+$yellow: #E0A800;
+
 $yellow-light: rgba(255, 206, 17, 0.6);
 
 
